--- a/.github/workflows/daily_analysis.yml
+++ b/.github/workflows/daily_analysis.yml
@@ -1,9 +1,12 @@
 name: 每日股票分析
 
 on:
-  # 定时触发 - 每天北京时间 18:00 (UTC 10:00)
+  # 定时触发
   schedule:
-    - cron: '0 10 * * 1-5'     # 周一到周五，UTC 10:00 = 北京时间 18:00
+    - cron: '30 1 * * 1-5'     #北京时间 09:30
+    - cron: '0 4 * * 1-5'      #北京时间 12:00
+    - cron: '0 7 * * 1-5'      #北京时间 15:00
+    - cron: '0 13 * * 1-5'     #北京时间 21:00
   
   # 手动触发
   workflow_dispatch:
